Fixed profile pic, margins with the titles, scrollbar, and harmburger stays on top

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -12,6 +12,26 @@ body {
     font-style: normal;
 }
 
+/* width of scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track of scrollbar */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle of scrollbar */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover of scrollbar */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #275F76; 
+  }
+
 /* navbar */
 .navbar {
     height: 100vh;
@@ -54,6 +74,10 @@ nav a:hover{
     color: #124E66;
 }
 
+nav a.active{
+    color:#124E66
+}
+
 
 .navbar h3:hover{
     cursor: pointer;
@@ -88,6 +112,8 @@ a{
     text-decoration: none;
     padding-right: 40px; 
 }
+
+
 
 
 
@@ -233,6 +259,7 @@ a{
     text-align: left;
     padding-left: 58px;
     font-size: 40px;
+    margin-top: -10px;
     /* font-size: 5vw; */
 }
 
@@ -248,6 +275,7 @@ a{
 
 #bullet{
     color: #275F76;
+    /* margin-top: -10px; */
 }
 
 /* bachelor/minor/master list */
@@ -287,6 +315,7 @@ a{
     text-align: left;
     padding-left: 58px;
     font-size: 40px;
+    margin-top: -25px;
     /* font-size: 5vw; */
 }
 
@@ -347,6 +376,7 @@ a{
     text-align: left;
     padding-left: 58px;
     font-size: 40px;
+    margin-top:-25px
     /* font-size: 5vw; */
 }
 
@@ -422,6 +452,7 @@ a{
     text-align: left;
     padding-left: 58px;
     font-size: 40px;
+    margin-top: -25px;
     /* font-size: 5vw; */
 }
 /* tools and languages, systems/applications, data/security */
@@ -466,6 +497,7 @@ a{
     text-align: left;
     padding-left: 58px;
     font-size: 40px;
+    margin-top: -25px;
 }
 
 .email{
@@ -612,26 +644,15 @@ a{
         display: none;
     }
 
-    /* #menu_toggle{
-        display: inline-block;
-    } */
-
     .icon2{
         display: block;
-        position: absolute;
+        position: fixed;
         right: 0;
         color: white;
         font-size: 30px;
+        margin-right: 15px;
+        margin-top: 5px;
     }
-    /* .icon{
-        display: inline-block;
-        position: absolute;
-        color: blue;
-    } */
-    
-    /* .nav_list{
-        display: none;
-    } */
 
     #content {
         margin-left: auto;
@@ -662,10 +683,23 @@ a{
 
     }
 
-    .list{
+    #education_name, #experience_name, #project_name, #skills_name, #contact_me_name{
+        padding-left: 18px;
+    }
+
+    .list, .list_exp, .list_project{
         /* width: 100px; */
         word-break: break-word;
+        padding-left: 0px;
 
+    }
+
+    .tools_list, .systems_list, .data_security_list{
+        padding-left: 21px;
+    }
+
+    .email, .number{
+        padding-left: 21px;
     }
     
 
